# testdemo

./: .gitignore
ahspider/: arcade_complete.py
bead-maker/: bead_color.json  index.html  script.js  style.css
bead-maker-android/: build.gradle  gradlew  local.properties  settings.gradle
bead-maker-chrome/: background.js  manifest.json  popup.css  popup.html  popup.js
bead-maker-win/bead-maker/src-tauri/: Cargo.toml  tauri.conf.json
bead-maker-win/bead-maker/src-tauri/capabilities/: default.json
bead-maker-win/bead-maker/src-tauri/src/: lib.rs  main.rs
bloomfiltervisualize/: index.html  script.js  style.css
capture_whole_page/: background.js  content.js  manifest.json  offscreen.js  popup.html  popup.js
chinesecalculator/: index.html  script.js  style.css
cpurate/: README.md  cpurate.py  requirements.txt  test_icons.py  test_layout.py  test_multicore.py  启动.bat
ebook_manager_gui/: README.md  database.py  detail_window.py  ebook_manager.db  ebook_parser.py  main_window.py  requirements.txt
fcromplayer/: index.html  test.html
fortnitemap/: check_zelda_tiles.py  convert_zelda_coords.py  download_tiles.py  download_zelda_tiles.py  fetch_zelda_pois.py  fill_zelda_tiles.py  generate_tiles.py  index.html  zelda_page.html
frpgui/: main.py  settings.json
htmlchater/: app.js  chat.html  index.html  run_qwen_9091.bat  start-server.bat  start.bat  style.css  启动服务器.bat
imagetools/: LICENSE  README.md  README_en.md  app.js  index.html  start.bat  start.sh  start_linux.sh  start_macos.sh  style.css
img_hover_zoom_chrome/: background.js  content.css  (+4 more)
(+240 files in other folders)
