[package]
name = "bead-maker"
version = "1.0.0"
description = "拼豆图生成器 - 将图片转换为拼豆图"
authors = ["you"]
edition = "2021"

[lib]
name = "bead_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
printpdf = "0.7"
winreg = "0.52"
base64 = "0.22"
